--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,9 @@ body {
   padding: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
 // * {
 //   &:focus {
 //     outline: none;
